<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="ok">"Ok"</string>
<string name="cancel">"Cancel"</string>
<string name="review">"Review"</string>
<string name="send">"Send"</string>
<string name="settings_menu_about">"About"</string>
<string name="settings_menu_configuration">"Settings"</string>
<string name="settings_menu_licence">"License"</string>
<string name="dialog_title_delete_surveys">"Are you sure that you want to remove all sent surveys?"</string>
<string name="dialog_title_delete_survey">"Delete Survey"</string>
<string name="dialog_info_delete_survey">"Are you sure you want to completely delete this survey?"</string>
<string name="dialog_title_error">"Error"</string>
<string name="create_info_organization_unit">"Organization Unit"</string>
<string name="assessment_sent_date">"Date"</string>
<string name="assessment_title_header">"Pending Send"</string>
<string name="assessment_sent_title_header">"Sent Surveys"</string>
...
