...
    android:orientation="vertical"
    android:measureWithLargestChild="false">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plusButton"
        android:background="@drawable/ic_menu_add"
        android:layout_gravity="center_horizontal"
        android:onClick="onNewSurvey"
        tools:showIn="@layout/dashboard_row" />

</LinearLayout>
